# agent_system

./: .gitignore  README.md  agent.py  gradio_agent.py  gradio_app.py  main.py  mydatabase.db  pyproject.toml  test_db.db  thoughts.drawio
app/: app.py
app/mcp_anonymizer/: anonymiz.py
app/mcp_database/: database.py  databse.py
app/mcp_email/: email_sender.py
app/mcp_file/: file_system.py
app/mcp_knowledge/: knowledge.py
app/mcp_python/: python_tools.py
data/database/: main_database.db
test_data/: db_anweisung.txt  text.txt
